# openweathermap-api

./: README.md  setup.cfg
src/openweathermap/: main.py
