[metadata]
name = openweathermap-simplified
version = 0.0.1
author = Sebastiaan Lampo
author_email = sebastiaan.lampo@gmail.com
description = A simple, opinionated wrapper for the openweathermap.org API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sebastiaan-lampo/openweathermap-api
project_urls =
    Bug Tracker = https://github.com/sebastiaan-lampo/openweathermap-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires=
    requests
python_requires = >=3.6

[options.packages.find]
where = src